--- a/styles/style.css
+++ b/styles/style.css
@@ -31,6 +31,9 @@ body {
 body {
   font-family: 'Hanken Grotesk', sans-serif;
   background-color: var(--pale-blue);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Moblie first styles */
