--- a/styles/style.css
+++ b/styles/style.css
@@ -205,7 +205,7 @@ body {
 }
 
 /* Desktop styles */
-@media (min-width: 768px) {
+@media (min-width: 48rem) {
   .card {
     flex-direction: row;
     max-width: 740px;
