--- a/styles/style.css
+++ b/styles/style.css
@@ -60,9 +60,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  min-height: 250px;
-  border-bottom-left-radius: 35px;
-  border-bottom-right-radius: 35px;
+  min-height: 15.625rem;
+  border-bottom-left-radius: 2.1875rem;
+  border-bottom-right-radius: 2.1875rem;
 }
 
 .card__container--right {
@@ -92,7 +92,7 @@ body {
   align-items: center;
   justify-content: space-between;
   padding: 1rem;
-  border-radius: 10px;
+  border-radius: 0.625rem;
 }
 
 .card__summary-left {
@@ -161,8 +161,8 @@ body {
 .card__score {
   background: linear-gradient(to bottom, var(--violet-blue-circle), var(--persian-blue-circle));
   color: var(--white);
-  width: 120px;
-  height: 120px;
+  width: 7.5rem;
+  height: 7.5rem;
   border-radius: 50%;
   display: flex;
   flex-direction: column;
@@ -201,7 +201,7 @@ body {
   font-size: 0.9rem;
   color: var(--light-lavender);
   line-height: 1.5;
-  max-width: 250px;
+  max-width: 15.625rem;
   margin: 0 auto;
 }
 
@@ -209,27 +209,27 @@ body {
 @media (min-width: 48rem) {
   .card {
     flex-direction: row;
-    max-width: 740px;
-    min-height: 500px;
+    max-width: 46.25rem;
+    min-height: 31.25rem;
     margin: 4rem auto;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     box-shadow: var(--box-shadow-light);
   }
 
   .card__container--left {
     flex: 1;
-    border-radius: 30px;
+    border-radius: 1.875rem;
   }
 
   .card__container--right {
     flex: 1;
-    border-radius: 30px;
+    border-radius: 1.875rem;
     padding: 2rem 2.5rem;
   }
 
   .card__score {
-    height: 185px;
-    width: 185px;
+    height: 11.5rem;
+    width: 11.5rem;
   }
 
   .card__score-number {
@@ -252,7 +252,7 @@ body {
 
   .card__description {
     margin-bottom: 1rem;
-    max-width: 200px;
+    max-width: 12.5rem;
   }
 
   .card__button {
